Fri Oct 30 06:20:40 2015  Koichi Sasada  <ko1@atdot.net>

	* insns.def: nobody set ic->ic_value.value to Qundef.

Fri Oct 30 06:15:50 2015  Koichi Sasada  <ko1@atdot.net>

	* vm.c: add ifndef guard for VM_CHECK_MODE.

Fri Oct 30 06:13:10 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_check_frame_detail): should require me for
	  VM_FRAME_FLAG_BMETHOD type frame.

Thu Oct 29 18:42:30 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_mark_ptr): specify NOINLINE so that gc_mark() can return
	  immediately when obj is not a markable object.

Thu Oct 29 18:05:22 2015  Koichi Sasada  <ko1@atdot.net>

	* encoding.c (rb_enc_check_str): add for performance.
	  This function only accepts T_STRING (and T_REGEXP).

	  This patch improves performance of a tiny_segmenter benchmark
	  (num=2) 2.54sec -> 2.42sec on my machine.
	  https://github.com/chezou/TinySegmenter.jl/blob/master/benchmark/benchmark.rb

	* encoding.c: add ENC_DEBUG and ENC_ASSERT() macros.

	* internal.h: add a decl. of rb_enc_check_str().

	* string.c (rb_str_plus): use rb_enc_check_str().

	* string.c (rb_str_subpat_set): ditto.

Thu Oct 29 17:16:40 2015  Koichi Sasada  <ko1@atdot.net>

	* internal.h: export rb_wb_(un)protected_newobj_of()
	  because some extensions include internal.h.

Thu Oct 29 16:42:19 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_imemo_new): should not pass FL_WB_PROTECTED flag.

	* gc.c (rb_wb_protected_newobj_of): add more assertions.

	* gc.c (rb_wb_unprotected_newobj_of): ditto.

Thu Oct 29 16:20:26 2015  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce rb_wb_unprotected_newobj_of() and
	  rb_wb_protected_newobj_of(), pass the WB_PROTECTED
	  information explicitly.

	* internal.h: use introduced functions by NEWOBJ_OF().
	  `flag' is immediate value, so that C compilers can
	  solve them at compile time.

	* include/ruby/ruby.h: add a comment about that.

Thu Oct 29 14:52:03 2015  Koichi Sasada  <ko1@atdot.net>
